--- a/ui.apps/src/main/content/jcr_root/apps/academy-munyemana-unicredit/clientlibs/clientlib-official/css/card.css
+++ b/ui.apps/src/main/content/jcr_root/apps/academy-munyemana-unicredit/clientlibs/clientlib-official/css/card.css
@@ -13,35 +13,50 @@
     border: 3px solid rgb(255, 255, 255);
     width: 400px;
     height: 450px;
-    overflow: hidden;
-    position:relative;
-    margin: 1rem 0;
+    /* overflow: hidden;
+    position:relative; */
+    /* margin: 1rem 0; */
+    /* background-color:aliceblue; */
 }
 .cardBg{
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    width: 400px;
+    height: 450px;
+    position: relative;
+    z-index: 0;
 }
-
+.imageBg, .videoBg{
+    width:400px;
+    height:450px;
+    position:absolute;
+}
+.wrapper{
+    z-index:2;
+    position:absolute;
+    top:20%
+}
 .atomsTitle{
     z-index: 1;
     /* padding: 2rem 0; */
     text-align: center;
     width: 100%;
-    position:absolute;
-    top: 20%;
+    /* position:absolute; */
+    color:white;
+    /* top: 30%; */
 }
 .atomsParagraph{
     z-index: 1;
-    font-size: 14px;
+    font-size: 25px;
     text-align: center;
-    position:absolute;
-    top: 40%;
-    padding: 0 1rem;
+    color:white;
+    /* position:absolute; */
+    /* top: 40%; */
+    /* left:10%; */
+    padding: 25px;
 }
 .btnWrapper{
     display: flex;
     justify-content: center;
+    padding-top:70px;
 }
 .atomsBtn{
     margin: 0 auto;
@@ -53,8 +68,8 @@
     padding: 10px 15px;
     color: white;
     cursor: pointer;
-    position:absolute;
-    bottom: 10%;
+    /* position:absolute; */
+    /* bottom: 10%; */
 }
 .atomsBtn:hover{
     opacity: 75%;
@@ -62,4 +77,17 @@
 .img{
     width: 100%;
     height: 100%;
+}
+.line-container{
+    width:400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.underline{
+    width: 60px;
+    height: 2px;
+    background-color: white;
+    z-index: 1;
 }
