--- a/ui.apps/src/main/content/jcr_root/apps/academy-munyemana-unicredit/components/atomicComponents/title/title.html
+++ b/ui.apps/src/main/content/jcr_root/apps/academy-munyemana-unicredit/components/atomicComponents/title/title.html
@@ -1,4 +1,10 @@
-<h1 class="atomsTitle" style="color: ${properties.color @context='unsafe'}; font-size:${properties.size @context='unsafe'}; padding:{properties.padding @context='unsafe'}">
-    ${properties.title @context='html'}<span data-sly-test="${!properties.title}">[ Add title]</span>
-</h1>
+<span data-sly-test="${!properties.title}"  class="atomsTitle">[ Add title]</span>
+<div>
+    <h1 data-sly-test="${properties.title}" class="atomsTitle" style="color: ${properties.color @context='unsafe'}; font-size:${properties.size @context='unsafe'}; padding:${properties.padding @context='unsafe'}">
+        ${properties.title @context='html'}
+    </h1>
+    <div class="line-container">
+        <div class="underline" style="background-color: ${properties.color @context='unsafe'}"></div>
+    </div>
+</div>
 
